@@ -11,6 +11,7 @@ import javax.servlet.http.HttpServletResponse;
 import javax.servlet.http.HttpSession;
 
 import org.apache.commons.beanutils.BeanComparator;
+import org.apache.commons.collections.CollectionUtils;
 import org.apache.struts.action.ActionError;
 import org.apache.struts.action.ActionErrors;
 import org.apache.struts.action.ActionForm;
@@ -21,15 +22,20 @@ import org.apache.struts.actions.DispatchAction;
 
 import DataBeans.InfoCandidateEnrolment;
 import DataBeans.InfoCurricularCourse;
+import DataBeans.InfoCurricularCourseScope;
 import DataBeans.InfoExecutionDegree;
+import DataBeans.InfoMasterDegreeCandidate;
 import ServidorAplicacao.GestorServicos;
 import ServidorAplicacao.IUserView;
 import ServidorAplicacao.Servico.exceptions.ExistingServiceException;
 import ServidorAplicacao.Servico.exceptions.FenixServiceException;
 import ServidorAplicacao.Servico.exceptions.NonExistingServiceException;
+import ServidorAplicacao.Servico.exceptions.NotAuthorizedException;
 import ServidorApresentacao.Action.exceptions.ExistingActionException;
 import ServidorApresentacao.Action.exceptions.FenixActionException;
+import ServidorApresentacao.Action.exceptions.NoChoiceMadeActionException;
 import ServidorApresentacao.Action.exceptions.NonExistingActionException;
+import ServidorApresentacao.Action.exceptions.NotAuthorizedActionException;
 import ServidorApresentacao.Action.sop.utils.SessionConstants;
 import Util.SituationName;
 
@@ -66,13 +72,27 @@ public class MakeCandidateStudyPlanDispatchAction extends DispatchAction {
 		String executionYear = (String) request.getAttribute("executionYear");
 		String degree = (String) request.getAttribute("degree");
 
+		InfoExecutionDegree infoExecutionDegree = (InfoExecutionDegree) session.getAttribute(SessionConstants.MASTER_DEGREE);
+
+
 		if (executionYear == null){
-			executionYear = (String) approvalForm.get("executionYear");
+			if (infoExecutionDegree != null){
+				executionYear = infoExecutionDegree.getInfoExecutionYear().getYear();
+			} else {
+				executionYear = (String) approvalForm.get("executionYear");	
+			}
+			
+			
 		}
 
 		if (degree == null){
-			degree = (String) approvalForm.get("degree");
+			if (infoExecutionDegree != null){
+				degree = infoExecutionDegree.getInfoDegreeCurricularPlan().getInfoDegree().getSigla();
+			} else {
+				degree = (String) approvalForm.get("degree");	
+			}
 		}
+		
 		
 		List candidateList = null;
 		
@@ -99,9 +119,6 @@ public class MakeCandidateStudyPlanDispatchAction extends DispatchAction {
 		
 		BeanComparator nameComparator = new BeanComparator("infoPerson.nome");
 		Collections.sort(candidateList, nameComparator);
-		
-//		generateToken(request);
-//		saveToken(request);
 		
 		request.setAttribute("executionYear", executionYear);
 		request.setAttribute("degree", degree);
@@ -131,8 +148,9 @@ public class MakeCandidateStudyPlanDispatchAction extends DispatchAction {
 		String executionYear = getFromRequest("executionYear", request);
 		
 		String candidateID = getFromRequest("candidateID", request);
-//		request.setAttribute("personID", candidateID);
+
 		chooseSecondMasterDegreeForm.set("candidateID", Integer.valueOf(candidateID));
+		chooseSecondMasterDegreeForm.set("masterDegree", null);
 
 		request.setAttribute("jspTitle", getFromRequest("jspTitle", request));
 		request.setAttribute("executionYear", executionYear);
@@ -209,19 +227,32 @@ public class MakeCandidateStudyPlanDispatchAction extends DispatchAction {
 		String executionYear = getFromRequest("executionYear", request);
 		String degree = getFromRequest("degree", request);
 		String candidateID = getFromRequest("candidateID", request);
+
+		InfoExecutionDegree infoExecutionDegree = (InfoExecutionDegree) session.getAttribute(SessionConstants.MASTER_DEGREE);		
 		
+		if ((degree == null) || (degree.length() == 0)){
+			degree = infoExecutionDegree.getInfoDegreeCurricularPlan().getInfoDegree().getSigla();
+		}
+		
+		if ((executionYear == null) || (executionYear.length() == 0)){
+			executionYear = infoExecutionDegree.getInfoExecutionYear().getYear();
+		}
+
+
 		request.setAttribute("jspTitle", getFromRequest("jspTitle", request));
 		request.setAttribute("executionYear", executionYear);
 		request.setAttribute("degree", degree);
 
 
+
 		// Get the Curricular Course List			
-		Object args[] = { executionYear, degree };
+		
 		IUserView userView = (IUserView) session.getAttribute(SessionConstants.U_VIEW);
 		GestorServicos serviceManager = GestorServicos.manager();
-		ArrayList curricularCourseList = null;
+		List curricularCourseList = null;
 		try {
-			curricularCourseList = (ArrayList) serviceManager.executar(userView, "ReadCurricularCoursesByDegree", args);
+			Object args[] = { executionYear, degree };
+			curricularCourseList = (List) serviceManager.executar(userView, "ReadCurricularCoursesByDegree", args);
 		} catch (NonExistingServiceException e) {
 			ActionErrors errors = new ActionErrors();
 			errors.add("nonExisting", new ActionError("message.public.notfound.curricularCourses"));
@@ -232,28 +263,130 @@ public class MakeCandidateStudyPlanDispatchAction extends DispatchAction {
 			throw new ExistingActionException(e);
 		}
 		
+		List candidateEnrolments = null;
 		
+		try {
+			Object args[] = {  new Integer(candidateID) };
+			candidateEnrolments = (List) serviceManager.executar(userView, "ReadCandidateEnrolmentsByCandidateID", args);
+		} catch(NotAuthorizedException e){
+			throw new NotAuthorizedActionException(e);
+		} catch (FenixServiceException e) {
+			throw new FenixActionException(e);
+		}
+		
+		
+		initForm(request, chooseCurricularCoursesForm, candidateID, curricularCourseList, candidateEnrolments);
+
+		curricularCourseList = cleanScopeList(curricularCourseList, candidateEnrolments);
 		
 		orderCourseList(curricularCourseList);
+		
+		orderCandidateEnrolments(candidateEnrolments);
 		
 		request.setAttribute("curricularCourses", curricularCourseList);
 
 
-		// Prepare the Form
-		chooseCurricularCoursesForm.set("candidateID", Integer.valueOf(candidateID));
-		chooseCurricularCoursesForm.set("attributedCredits", new Double(0));
-		
+		if (infoExecutionDegree != null){
+			request.setAttribute("infoExecutionDegree", infoExecutionDegree);
+		} else {
+			try {
+				Object args[] = {  new Integer(candidateID) };
+				infoExecutionDegree = (InfoExecutionDegree) serviceManager.executar(userView, "ReadExecutionDegreeByCandidateID", args);
+			}  catch(NotAuthorizedException e){
+				throw new NotAuthorizedActionException(e);
+			} catch (FenixServiceException e) {
+				throw new FenixActionException(e);
+			}
 
-//ler cadeiras do aluno e fazer outra lista para mostrar
+			request.setAttribute("infoExecutionDegree", infoExecutionDegree);
+			
+		}
+
+
 
 
 		return mapping.findForward("PrepareSuccess");
 	}
 	
+
+	private void orderCandidateEnrolments(List candidateEnrolments) {
+		BeanComparator nameCourse = new BeanComparator("infoCurricularCourseScope.infoCurricularCourse.name");
+		Collections.sort(candidateEnrolments, nameCourse);
+	}
+
+	private List cleanScopeList(List curricularCourseList, List candidateEnrolments) {
+		List idsTemp = new ArrayList();
+		Iterator iterator = candidateEnrolments.iterator(); 
+		while(iterator.hasNext()){
+			idsTemp.add(((InfoCandidateEnrolment) iterator.next()).getInfoCurricularCourseScope().getIdInternal());
+		}
+	
+		List curricularCourses = new ArrayList();
+		List possibleScopes = new ArrayList();
+		Iterator iteratorCourse = curricularCourseList.iterator();
+		while(iteratorCourse.hasNext()){
+			InfoCurricularCourse infoCurricularCourse = (InfoCurricularCourse) iteratorCourse.next();
+			Iterator iteratorScope = (Iterator) infoCurricularCourse.getInfoScopes().iterator();
+			while(iteratorScope.hasNext()){
+				InfoCurricularCourseScope infoCurricularCourseScope = (InfoCurricularCourseScope) iteratorScope.next();
+
+				List temp = new ArrayList();
+				temp.add(infoCurricularCourseScope.getIdInternal());
+				if (!CollectionUtils.containsAny(idsTemp, temp)){
+					possibleScopes.add(infoCurricularCourseScope);
+				}	
+			}
+			if (possibleScopes.size() > 0){
+				infoCurricularCourse.setInfoScopes(possibleScopes);
+				curricularCourses.add(infoCurricularCourse);
+			}
+			possibleScopes = new ArrayList();
+		}
+		return curricularCourses;
+	}
+
+	private void initForm(HttpServletRequest request, DynaActionForm chooseCurricularCoursesForm, String candidateID, List curricularCourseList, List candidateEnrolments) {
+		Integer selection[] = new Integer[curricularCourseList.size() + candidateEnrolments.size()];
+		InfoCandidateEnrolment infoCandidateEnrolment = null;
+		
+		if ((candidateEnrolments != null) && (candidateEnrolments.size() != 0)){
+			infoCandidateEnrolment = (InfoCandidateEnrolment) candidateEnrolments.get(0);
+			
+			if ((infoCandidateEnrolment.getInfoMasterDegreeCandidate().getGivenCredits() == null) || (infoCandidateEnrolment.getInfoMasterDegreeCandidate().getGivenCredits().equals(new Double(0)))){
+				chooseCurricularCoursesForm.set("attributedCredits", null);
+			} else {
+				chooseCurricularCoursesForm.set("attributedCredits", infoCandidateEnrolment.getInfoMasterDegreeCandidate().getGivenCredits().toString());	
+			}
+			
+			if ((infoCandidateEnrolment.getInfoMasterDegreeCandidate().getGivenCreditsRemarks() == null) || (infoCandidateEnrolment.getInfoMasterDegreeCandidate().getGivenCreditsRemarks().length() == 0)){
+				chooseCurricularCoursesForm.set("givenCreditsRemarks", null);
+			} else {
+				chooseCurricularCoursesForm.set("givenCreditsRemarks", infoCandidateEnrolment.getInfoMasterDegreeCandidate().getGivenCreditsRemarks());
+			}
+
+			
+			for (int i = 0; i < selection.length; i++){
+				if (i < candidateEnrolments.size()){
+					selection[i] = ((InfoCandidateEnrolment) candidateEnrolments.get(i)).getInfoCurricularCourseScope().getIdInternal();	
+				} else {
+					selection[i] = null;
+				}
+			}
+			request.setAttribute("candidateEnrolments", candidateEnrolments);
+		} else if ((candidateEnrolments == null) || (candidateEnrolments.size() == 0)){
+			candidateEnrolments = new ArrayList();
+			chooseCurricularCoursesForm.set("givenCreditsRemarks", null);
+			chooseCurricularCoursesForm.set("attributedCredits", null);
+		}
+		
+		chooseCurricularCoursesForm.set("candidateID", Integer.valueOf(candidateID));
+		chooseCurricularCoursesForm.set("selection", selection);
+	}
+
 	/**
 	 * @param curricularCourseList
 	 */
-	private void orderCourseList(ArrayList curricularCourseList) {
+	private void orderCourseList(List curricularCourseList) {
 		BeanComparator nameCourse = new BeanComparator("name");
 		Collections.sort(curricularCourseList, nameCourse);
 
@@ -276,7 +409,7 @@ public class MakeCandidateStudyPlanDispatchAction extends DispatchAction {
 	 * @return
 	 * @throws Exception
 	 */
-//	UNDER CONSTRUCTION		
+		
 	public ActionForward chooseCurricularCourses(ActionMapping mapping, ActionForm form,
 										HttpServletRequest request,
 										HttpServletResponse response)
@@ -288,17 +421,29 @@ public class MakeCandidateStudyPlanDispatchAction extends DispatchAction {
 		
 		GestorServicos serviceManager = GestorServicos.manager();	
 		IUserView userView = (IUserView) session.getAttribute(SessionConstants.U_VIEW);
-		String[] selection =  (String[]) chooseCurricularCoursesForm.get("selection");
+		Integer[] selection =  (Integer[]) chooseCurricularCoursesForm.get("selection");
 
-// testar se a selecção nao foi feita e lançar excepçao
+		if ((selection != null) && (selection.length == 0)){
+			throw new NoChoiceMadeActionException(null);
+		}	
+		
+	    Integer candidateID = (Integer) chooseCurricularCoursesForm.get("candidateID");
 
-	   Integer candidateID = (Integer) chooseCurricularCoursesForm.get("candidateID");
-	   
-		Double attributedCredits = (Double) chooseCurricularCoursesForm.get("attributedCredits");
+		String attributedCreditsString = (String) chooseCurricularCoursesForm.get("attributedCredits");
+		
+	    Double attributedCredits = null;
+	    if ((attributedCreditsString == null) || (attributedCreditsString.length() == 0)){
+	    	attributedCredits = new Double(0);
+	    } else {
+			attributedCredits = Double.valueOf(attributedCreditsString);	
+	    }
+	    
+	    
+	    String givenCreditsRemarks = (String) chooseCurricularCoursesForm.get("givenCreditsRemarks");
 
 		
 		try {
-			Object args[] = { selection, candidateID , attributedCredits};
+			Object args[] = { selection, candidateID , attributedCredits, givenCreditsRemarks};
 			serviceManager.executar(userView, "WriteCandidateEnrolments", args);
 		} catch (NonExistingServiceException e) {
 			throw new NonExistingActionException(e);
@@ -309,10 +454,11 @@ public class MakeCandidateStudyPlanDispatchAction extends DispatchAction {
 		try {
 			Object args[] = {  candidateID };
 			candidateEnrolments = (List) serviceManager.executar(userView, "ReadCandidateEnrolmentsByCandidateID", args);
-		} catch (NonExistingServiceException e) {
-			
+		} catch (FenixServiceException e) {
+			throw new FenixActionException(e);
 		}
-		
+
+				
 		Iterator coursesIter = candidateEnrolments.iterator();
 		float credits = attributedCredits.floatValue();
 	
@@ -324,10 +470,13 @@ public class MakeCandidateStudyPlanDispatchAction extends DispatchAction {
 		request.setAttribute("givenCredits", new Double(credits));
 
 		if ((candidateEnrolments != null) && (candidateEnrolments.size() != 0)){
+			orderCandidateEnrolments(candidateEnrolments);
 			request.setAttribute("candidateEnrolments", candidateEnrolments);
 		}
 
 		InfoExecutionDegree infoExecutionDegree = null;
+		
+		
 		try {
 			Object args[] = {  candidateID };
 			infoExecutionDegree = (InfoExecutionDegree) serviceManager.executar(userView, "ReadExecutionDegreeByCandidateID", args);
@@ -337,16 +486,8 @@ public class MakeCandidateStudyPlanDispatchAction extends DispatchAction {
 
 		request.setAttribute("executionDegree", infoExecutionDegree);
 	
-
-		
 		return mapping.findForward("ChooseSuccess");
 	}
-	
-	
-	
-	
-	
-	
 	
 	
 	private String getFromRequest(String parameter, HttpServletRequest request) {
@@ -360,190 +501,71 @@ public class MakeCandidateStudyPlanDispatchAction extends DispatchAction {
 	
 	
 	
+
+	 
+	public ActionForward print(ActionMapping mapping, ActionForm form,
+									HttpServletRequest request,
+									HttpServletResponse response)
+		throws Exception {
 	
+			HttpSession session = request.getSession(false);
+			DynaActionForm chooseCurricularCoursesForm = (DynaActionForm) form;
+		
+			GestorServicos serviceManager = GestorServicos.manager();	
+			IUserView userView = (IUserView) session.getAttribute(SessionConstants.U_VIEW);
+
+		    Integer candidateID = (Integer) chooseCurricularCoursesForm.get("candidateID");
+
+		    
+			List candidateEnrolments = null;		
+			try {
+				Object args[] = {  candidateID };
+				candidateEnrolments = (List) serviceManager.executar(userView, "ReadCandidateEnrolmentsByCandidateID", args);
+			} catch (NonExistingServiceException e) {
+			
+			}
+			
+			orderCandidateEnrolments(candidateEnrolments);
+
+ 			InfoMasterDegreeCandidate infoMasterDegreeCandidate = null;
+			try {
+				Object args[] = {  candidateID };
+				infoMasterDegreeCandidate = (InfoMasterDegreeCandidate) serviceManager.executar(userView, "GetCandidatesByID", args);
+			} catch (FenixServiceException e) {
+				throw new FenixActionException(e);
+			}
+
+			request.setAttribute("infoMasterDegreeCandidate", infoMasterDegreeCandidate);
+
+		
+			Iterator coursesIter = candidateEnrolments.iterator();
+			float credits = infoMasterDegreeCandidate.getGivenCredits().floatValue();
 	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
+			while(coursesIter.hasNext()){
+				InfoCandidateEnrolment infoCandidateEnrolment = (InfoCandidateEnrolment) coursesIter.next();
+				credits += infoCandidateEnrolment.getInfoCurricularCourseScope().getInfoCurricularCourse().getCredits().floatValue();
+			}
+		
+			request.setAttribute("totalCredits", new Double(credits));
+
+			if ((candidateEnrolments != null) && (candidateEnrolments.size() != 0)){
+				request.setAttribute("candidateEnrolments", candidateEnrolments);
+			}
+
+			InfoExecutionDegree infoExecutionDegree = null;
+			try {
+				Object args[] = {  candidateID };
+				infoExecutionDegree = (InfoExecutionDegree) serviceManager.executar(userView, "ReadExecutionDegreeByCandidateID", args);
+			} catch (FenixServiceException e) {
+				throw new FenixActionException(e);
+			}
+
+			request.setAttribute("infoExecutionDegree", infoExecutionDegree);
 	
 
-//	 
-//	public ActionForward print(ActionMapping mapping, ActionForm form,
-//									HttpServletRequest request,
-//									HttpServletResponse response)
-//		throws Exception {
-//	
-//		HttpSession session = request.getSession(false);
-//	
-//		DynaActionForm resultForm = (DynaActionForm) form;
-//				
-//		IUserView userView = (IUserView) session.getAttribute(SessionConstants.U_VIEW);
-//		GestorServicos serviceManager = GestorServicos.manager();
-//	
-//		String[] candidateList = (String[]) resultForm.get("situations");
-//		String[] ids = (String[]) resultForm.get("candidatesID");
-//		String[] remarks = (String[]) resultForm.get("remarks");
-//		String[] substitutes = (String[]) resultForm.get("substitutes");
-//	
-//		
-//
-//		
-//		request.setAttribute("situations", candidateList);
-//		request.setAttribute("candidatesID", ids);
-//		request.setAttribute("remarks", remarks);
-//		request.setAttribute("substitutes", substitutes);
-//
-//		List candidates = new ArrayList();
-//	
-//			
-//		try {
-//			Object args[] = { ids };
-//			candidates = (List) serviceManager.executar(userView, "ReadCandidates", args);					
-//		} catch (ExistingServiceException e) {
-//			throw new ExistingActionException(e);
-//		}			
-//
-//		List result = getLists(candidateList, ids, remarks, substitutes, candidates);
-//		
-//		sortLists(result);
-//		
-//		
-////		Iterator iterator = result.iterator();
-////		while(iterator.hasNext()){
-////			InfoCandidateApprovalGroup infoCandidateApprovalGroup = (InfoCandidateApprovalGroup) iterator.next();
-////			Iterator iter = infoCandidateApprovalGroup.getCandidates().iterator();
-////			System.out.println(infoCandidateApprovalGroup.getSituationName());
-////			while(iter.hasNext()){
-////				InfoCandidateApproval infoCandidateApproval = (InfoCandidateApproval) iter.next();
-////			}	 
-////		}
-//		
-//		request.setAttribute("infoGroup", result);
-//		
-//		InfoExecutionDegree infoExecutionDegree = null;
-//		
-//		try {
-//			Object args[] = { resultForm.get("executionYear"),  resultForm.get("degree")};
-//			infoExecutionDegree = (InfoExecutionDegree) serviceManager.executar(userView, "ReadDegreeByYearAndCode", args);					
-//		} catch (ExistingServiceException e) {
-//			throw new ExistingActionException(e);
-//		}	
-//
-//		request.setAttribute("infoExecutionDegree", infoExecutionDegree);
-//		
-//		if (request.getAttribute("confirmation") != null){
-//			request.setAttribute("confirmation", request.getAttribute("confirmation"));
-//		} else {
-//			request.setAttribute("confirmation", "PRINT_PAGE");
-//		}
-//		return mapping.findForward("PrintReady");	
-//	}		
-//	 
-//	 
-//	 
-//	 
-//	
-//	 
-//	/**
-//	 * @param result
-//	 */
-//	private void sortLists(List result) {
-//		
-//		Iterator iterator = result.iterator();
-//		while(iterator.hasNext()){
-//			InfoCandidateApprovalGroup infoCandidateApprovalGroup = (InfoCandidateApprovalGroup) iterator.next();
-//			BeanComparator comparator = null;
-//			
-//			if (infoCandidateApprovalGroup.getSituationName().equals(SituationName.ADMITIDO_STRING)){
-//				comparator = new BeanComparator("candidateName");
-//			} else if (infoCandidateApprovalGroup.getSituationName().equals(SituationName.SUPLENTE_STRING)){
-//				comparator = new BeanComparator("orderPosition");	
-//			} else if (infoCandidateApprovalGroup.getSituationName().equals(SituationName.NAO_ACEITE_STRING)){
-//				comparator = new BeanComparator("candidateName");
-//			}
-//			Collections.sort(infoCandidateApprovalGroup.getCandidates(), comparator);
-//		}
-//	}
-//
-//
-//	/**
-//	 * @param candidateList
-//	 * @param ids
-//	 * @param remarks
-//	 * @param substitutes
-//	 * @return
-//	 */
-//	private List getLists(String[] candidateList, String[] ids, String[] remarks, String[] substitutes, List candidates) {
-//		InfoCandidateApprovalGroup approvedList = new InfoCandidateApprovalGroup();
-//		approvedList.setSituationName(SituationName.ADMITIDO_STRING);
-//		
-//		InfoCandidateApprovalGroup notApprovedList = new InfoCandidateApprovalGroup();
-//		notApprovedList.setSituationName(SituationName.NAO_ACEITE_STRING);
-//		
-//		InfoCandidateApprovalGroup substitutesList = new InfoCandidateApprovalGroup();
-//		substitutesList.setSituationName(SituationName.SUPLENTE_STRING);
-//		
-//		
-//		
-//		for (int i = 0; i < candidateList.length; i++){
-//			InfoCandidateApproval infoCandidateApproval = new InfoCandidateApproval();
-//			infoCandidateApproval.setCandidateName(((InfoMasterDegreeCandidate) candidates.get(i)).getInfoPerson().getNome());
-//			infoCandidateApproval.setIdInternal(new Integer(ids[i]));
-//			if ((substitutes[i] != null) && (substitutes[i].length() > 0)){
-//				infoCandidateApproval.setOrderPosition(new Integer(substitutes[i]));	
-//			} else {
-//				infoCandidateApproval.setOrderPosition(null);
-//			}
-//			
-//			infoCandidateApproval.setRemarks(remarks[i]);
-//			infoCandidateApproval.setSituationName(candidateList[i]);
-//			
-//			if((candidateList[i].equals(SituationName.ADMITIDO_STRING)) || 
-//				(candidateList[i].equals(SituationName.ADMITED_CONDICIONAL_CURRICULAR_STRING)) ||
-//				(candidateList[i].equals(SituationName.ADMITED_CONDICIONAL_FINALIST_STRING)) ||
-//			   	(candidateList[i].equals(SituationName.ADMITED_CONDICIONAL_OTHER_STRING))) {
-//				approvedList.getCandidates().add(infoCandidateApproval);
-//			} else if((candidateList[i].equals(SituationName.SUPLENTE_STRING)) || 
-//						(candidateList[i].equals(SituationName.SUBSTITUTE_CONDICIONAL_CURRICULAR_STRING)) ||
-//						(candidateList[i].equals(SituationName.SUBSTITUTE_CONDICIONAL_FINALIST_STRING)) ||
-//						(candidateList[i].equals(SituationName.SUBSTITUTE_CONDICIONAL_OTHER_STRING))) {
-//				substitutesList.getCandidates().add(infoCandidateApproval);
-//			} else if (candidateList[i].equals(SituationName.NAO_ACEITE_STRING)){
-//				notApprovedList.getCandidates().add(infoCandidateApproval);
-//			}
-//			
-//		}
-//
-//		List result = new ArrayList();
-//		result.add(approvedList);
-//		result.add(substitutesList);
-//		result.add(notApprovedList);
-//		
-//		return result;
-//	}
-//
-//
-//	private static boolean hasSubstitutes(String[] list){O
-//		int size = list.length;
-//		int i = 0;
-//		for (i=0; i<size; i++){ 
-//			if(list[i].equals(SituationName.SUPLENTE_STRING)
-//				|| list[i].equals(SituationName.SUBSTITUTE_CONDICIONAL_CURRICULAR_STRING)
-//				|| list[i].equals(SituationName.SUBSTITUTE_CONDICIONAL_FINALIST_STRING)
-//				|| list[i].equals(SituationName.SUBSTITUTE_CONDICIONAL_OTHER_STRING))
-//				return true;
-//		}		 
-//		 return false;
-//	}
-//			 
+		
+			return mapping.findForward("PrintReady");
+	}		
+	 
+	 
 }
